# dbilib

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
dbilib/: _dbi_base.py  _dbi_mssql.py  _dbi_mysql.py  _dbi_oracle.py  _dbi_sqlite.py  database.py
dbilib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dblib/: LICENSE  _dbi_base.py  _dbi_mysql.py  _dbi_oracle.py  _dbi_sqlite.py  _version.py  database.py
dblib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: requirements.txt
docs/source/: _dbi_base.rst  _dbi_mssql.rst  _dbi_mysql.rst  _dbi_oracle.rst  _dbi_sqlite.rst  conf.py  contact.rst  database.rst  index.rst  library.rst  spelling_wordlist.txt
pylintr/: pylintr.sh
pylintr/results/: dbilib__dbi_base.plr  dbilib__dbi_mssql.plr  dbilib__dbi_mysql.plr  dbilib__dbi_oracle.plr  dbilib__dbi_sqlite.plr  dbilib__dbi_sqlserver.plr  dbilib_changelog.plr  dbilib_database.plr  dblib__dbi_base.plr  dblib__dbi_mysql.plr  dblib__dbi_oracle.plr  dblib__dbi_sqlite.plr  dblib_database.plr  setup.plr  summary.plr  testlibs_constants.plr  testlibs_utilities.plr  tests_base.plr  tests_test_database_mssql.plr  tests_test_database_mysql.plr  tests_test_database_sqlite.plr
tests/: .coverage  .coveragerc  base.py  run.sh  test_database_mssql.py  test_database_mysql.py  test_database_sqlite.py
tests/resources/: README  create_db_users.sql  create_proc__sp_get_guitars_colour.sql  create_view__v_guitars_fender.sql  db_setup.sh  db_setup_mysql.sh  db_setup_sqlite.sh  db_teardown.sh  db_teardown_mysql.sh  db_teardown_sqlite.sh  drop__all.sql  testing123
tests/resources/data/: test03a__call_procedure.p
tests/resources/mssql/raw_data/: data__guitars.csv
tests/testlibs/: constants.py  utilities.py
(+19 files in other folders)
